syntax = "proto3";

package pb;

option csharp_namespace="pb";

message ChangeStatusRequest {
  string UserID = 1;
  int32 Status = 2;
}

message ChangeStatusNotice {
  string UserID = 1;
  int32 Status = 2;
}